# sikkerhet

./: .gitignore
oving_1/: hello_world  hello_world.c
oving_10/: auth.py  oppgave_2.md  server.py  users.db
oving_10/oppgave_1/: README.md  auth.py  server.py
oving_10/oppgave_1/static/css/: style.css
oving_10/oppgave_1/templates/: login.html
oving_10/static/css/: style.css
oving_10/static/js/: script.js
oving_10/templates/: login.html
oving_11/: epostsjekk
oving_4/oppgave_1/: README.md  hello  hello.s  run.sh
oving_4/oppgave_2/: a_function.h  main.c  more_functions.c
oving_4/oppgave_3/: a_function.c  c_example  main.c  run.sh
oving_5/: oppg_1  oppg_2  oppg_3  oppg_4  oppg_6
oving_5/home/magnus/: fil4
oving_6/oppg_c/: CMakeLists.txt  main.cpp
oving_8/: CMakeLists.txt  crypto.hpp  oppg_1.cpp  oppg_2.cpp  oppg_3.cpp
